# ingredients_backend

./: README.md  app.py  gunicorn.conf.py  ingredients_api.py  main.py  pyproject.toml  replit.md  requirements.txt  wsgi.py
services/: ocr_processor.py  openai_service.py  spoonacular.py
static/: script.js  style.css
templates/: index.html
