[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Food Ingredients Backend for Dish Name Extraction"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
]

[deployment]
run = ["gunicorn", "--config", "gunicorn.conf.py", "wsgi:app"]
deploymentTarget = "cloudrun"

[nix]
channel = "stable-23_05"

[[ports]]
localPort = 5000
externalPort = 80